src/tests/snapshots/nyx__tests__window_opening__check_target_size@omT-dwP0.25-dhP0.5-b.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    open-maximized true\n    default-column-width { proportion 0.25; }\n    default-window-height { proportion 0.5; }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1272 × 352, bounds: 1272 × 712, states: []

post-map configures:
size: 1 × 352, bounds: 1272 × 712, states: [Activated]
